feat: update UI components and add marketplace functionality
- Increased padding in the Home component for better layout.
- Updated ConnectButton to use new User type from Honeycomb protocol.
- Enhanced DiceRoll component to handle buffs and update game state.
- Changed GetstartedButton to navigate to the lobby instead of minting.
- Improved HowToPlay component structure and styling.
- Introduced Marketplace component for purchasing power-ups with chakra.
- Added Missions component to display character missions and XP.
- Integrated new Sheet component for better modal handling.
- Created buffs data structure for power-ups in the game.
- Updated character types to include address property.
- Refactored online game store to manage buffs for players.
- Cleaned up user type imports to use the latest structure.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@honeycomb-protocol/edge-client": "^0.0.7-beta.15",
+    "@honeycomb-protocol/hive-control": "^0.2.6",
+    "@honeycomb-protocol/nectar-missions": "^0.1.45-beta.58",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -17,11 +20,13 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@solana/spl-account-compression": "^0.1.10",
+    "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
