--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
